<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/imageView"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:scaleType="fitCenter"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/courseTextView"
                    android:textSize="25sp"
                    android:layout_weight=".25"
                    android:text="@string/course_name_txt"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addressTextView"
                    android:layout_weight=".25"
                    android:text="@string/address_txt"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phoneTextView"
                    android:layout_weight=".25"
                    android:text="@string/phone_txt"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailTextView"
                    android:layout_weight=".25"
                    android:text="@string/email_txt"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>