<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/linearLayout">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/imageView"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:scaleType="fitCenter"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_gravity="fill_vertical"
                    android:layout_height="match_parent">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/addressTextView"
                        android:layout_weight=".25"
                        android:layout_gravity="center_vertical"
                        android:text="@string/address_txt"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_weight=".25"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:id="@+id/phoneTextView"
                        android:text="@string/phone_txt"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_weight=".25"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:id="@+id/emailTextView"
                        android:text="@string/email_txt"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/infoTextView"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/webTextView"
            android:onClick="openBrowser"
            android:textColor="#008080"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
            app:layout_constraintTop_toBottomOf="@+id/webLaunchTextView" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/map_api_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/mapTextView"
            android:onClick="launchMap"
            android:textColor="#008080"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
            app:layout_constraintTop_toBottomOf="@+id/locationTextView" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/web_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/webLaunchTextView"
            app:layout_constraintTop_toBottomOf="@+id/infoTextView" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"/>
    <TextView
            android:text="@string/map_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/locationTextView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/webTextView" android:layout_marginStart="40dp"/>

</android.support.constraint.ConstraintLayout>